--- a/introduction to html5/consentida.html
+++ b/introduction to html5/consentida.html
@@ -8,7 +8,7 @@
         <h1>Y asi se ve una consentida</h1>
         <br>
         <figure>
-            <video src="images/consentida.mp4" width="20%" autoplay></video>
+            <video src="images/consentida.mp4" width="20%" autoplay loop></video>
         </figure>
     </body>
 
